# protohackers_ocaml

./: README.md  dune-project  protohackers_ocaml.opam  protohackers_ocaml.opam.locked
problem00/: dune  problem00.ml
problem01/: dune  problem01.ml
problem02/: dune  problem02.ml
problem03/: dune  problem03.ml
problem04/: dune  problem04.ml
problem05/: dune  problem05.ml
problem06/: dune  problem06.ml
test/: dune
